# reportas-server

./: .drone.yml  .env  Cargo.toml  Dockerfile  README.md  build.rs  config.toml  database.env  docker-compose.yml
migrations/2020-12-19-003641_create_reports/: up.sql
migrations/2021-07-03-035724_reports/: down.sql  up.sql
proto/: report.proto
reportas-server/: Cargo.toml  Dockerfile  build.rs  docker-compose.yml
reportas-server/migrations/latest_reports/: up.sql
reportas-server/src/: client.rs  lib.rs  report_handler.rs  report_transporter.rs  server.rs
reportas-server/src/data/: models.rs  schema.rs
reportas-server/src/proto/: report1_0.proto
src/: client.rs  dao.rs  lib.rs  models.rs  report_handler.rs  report_transporter.rs  schema.rs  server.rs  transporter.rs
src/data/: models.rs
src/grpc/: mod.rs  report_handler.rs
tests/integration_tests/: Cargo.toml  build.rs
tests/integration_tests/proto/: report.proto
tests/integration_tests/src/: lib.rs
tests/persistence/: Cargo.toml
