[package]
name = "reportas-server"
version = "0.1.0"
authors = ["osk <tgv.alpha@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
tonic = "0.3"
prost = "0.6"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tokio = { version = "0.2", features = ["macros", "sync", "stream", "time"] }

diesel = { version = "1.4.5", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"

async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"

[build-dependencies]
tonic-build = "0.3"

[lib]
name = "service"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
