[package]
name = "reportas-server"
version = "0.1.0"
authors = ["osk <tgv.alpha@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tonic = "0.4"
prost = "0.7"
futures-core = "0.3"
futures-util = "0.3"
warp = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-stream = "0.2"
tracing = "0.1.23"
tracing-subscriber = "0.2"
thiserror = "1.0"
clap = "2.33.3"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
diesel = { version = "1.4.7", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5.8"

[build-dependencies]
tonic-build = "0.4"

[lib]
name = "service"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
